--- a/src/ShowcaseView/ShowcaseView.csproj
+++ b/src/ShowcaseView/ShowcaseView.csproj
@@ -99,6 +99,9 @@
       <Version>27.0.2</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\nugetIcon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
