--- a/src/ShowcaseView/Xama.JTPorts.ShowcaseView.csproj
+++ b/src/ShowcaseView/Xama.JTPorts.ShowcaseView.csproj
@@ -10,26 +10,28 @@
     <TemplateGuid>{9ef11e43-1701-4396-8835-8392d57abb70}</TemplateGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ShowcaseView</RootNamespace>
-    <AssemblyName>ShowcaseView</AssemblyName>
+    <RootNamespace>Xama.JTPorts.ShowcaseView</RootNamespace>
+    <AssemblyName>Xama.JTPorts.ShowcaseView</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>v8.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <PackageId>xamarin.android.showcaseview</PackageId>
-    <PackageVersion>1.0.0</PackageVersion>
+    <PackageVersion>1.0.1</PackageVersion>
     <Description>ShowcaseView started as a C# port from the Java library called %27FancyShowCaseView%27.</Description>
     <Authors>Joe Tomkinson</Authors>
     <Owners>Joe Tomkinson</Owners>
-    <Copyright>Joe Tomkinson</Copyright>
+    <Copyright>2020</Copyright>
     <PackageProjectUrl>https://github.com/DigitalSa1nt/Xamarin.ShowcaseView</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/DigitalSa1nt/Xamarin.ShowcaseView/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/DigitalSa1nt/Xamarin.ShowcaseView/master/images/nugetIcon.png</PackageIconUrl>
-    <Summary />
+    <PackageLicenseUrl>
+    </PackageLicenseUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/DigitalSa1nt/Xama.JTPorts.ShowcaseView/master/images/nugetIcon.png</PackageIconUrl>
+    <Summary>ShowcaseView started as a C# port from the Java library called %27FancyShowCaseView%27.</Summary>
     <Title>Xamarin.Android.ShowcaseView</Title>
     <IsDevelopmentDependency>False</IsDevelopmentDependency>
     <IsPackable>true</IsPackable>
+    <NeutralLanguage>enGB</NeutralLanguage>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -95,8 +97,8 @@
     <PackageReference Include="NuGet.Build.Packaging">
       <Version>0.2.2</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Android.Support.v7.AppCompat">
-      <Version>27.0.2</Version>
+    <PackageReference Include="Xamarin.AndroidX.AppCompat">
+      <Version>1.1.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
