--- a/src/ShowcaseView/Xama.JTPorts.ShowcaseView.csproj
+++ b/src/ShowcaseView/Xama.JTPorts.ShowcaseView.csproj
@@ -100,6 +100,9 @@
     <PackageReference Include="Xamarin.AndroidX.AppCompat">
       <Version>1.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.AppCompat.Resources">
+      <Version>1.1.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\nugetIcon.png" />
